fix: left align recent events

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,6 +27,10 @@ h1, h2, h3, h4, h5, h6 {
 	text-align: center !important;
 }
 
+li {
+	text-align: left !important;
+}
+
 
 
 /* Override Bootstrap stuff */
